# patasmonkey

./: .bash_history  .gitconfig  .gitignore  README.md
.cache/Microsoft/DeveloperTools/: deviceid
.ssh/: known_hosts
.vscode-server/data/: machineid
.vscode-server/data/CachedProfilesData/__default__profile__/: extensions.builtin.cache  extensions.user.cache
.vscode-server/data/Machine/: .connection-token-e54c774e0add60467559eb0d1e229c6452cf8447
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
launch/: patasmonkey.launch.py  patasmonkey_teleop.launch.py
log/: latest_build
src/patasmonkey_teleop/: package.xml  setup.cfg  setup.py
src/patasmonkey_teleop/config/: joy_params.yaml  teleop_twist_joy.yaml
src/patasmonkey_teleop/launch/: joy_teleop.launch.py
src/patasmonkey_vehicle_interface/: package.xml  setup.cfg  setup.py
src/patasmonkey_vehicle_interface/config/: vehicle_params.yaml
src/patasmonkey_vehicle_interface/launch/: vehicle_interface.launch.py
src/patasmonkey_vehicle_interface/patasmonkey_vehicle_interface/: __init__.py  odrive_controller.py  odrive_utils.py  vehicle_interface_node.py
